--- a/views/homepageEE.ejs
+++ b/views/homepageEE.ejs
@@ -1,4 +1,6 @@
-<link rel="stylesheet" href="/stylesheets/homepage.css" type="text/css"/>
+
+<link rel="stylesheet" href="/stylesheets/homepageEE.css" type="text/css"/>
+
 
 <div class="logoutnbtn">
     <form action="/logout" method="post">
@@ -8,11 +10,30 @@
     </form>
 </div>
 
-<div class="rowclasses">
-    
-    <div class="classblock" onclick="window.location='/homepage/D/alunos'">
-        <h1 class="classborder" >
-           A
-        </h1>
+<h1 class="classesText">Os Meus Educandos</h1>
+<div class="card-group">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
     </div>
-</div>
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
