--- a/public/stylesheets/relatorios.css
+++ b/public/stylesheets/relatorios.css
@@ -1,9 +1,9 @@
 
 .btnNewR{
-    border-radius: 10px;
-	border: 1px solid #0d2c92;
-	background-color: #f6f5f7;
-	color: #0d2c92;
+    border-radius: 20px;
+	border: 1px solid transparent;
+	background-color: #0a67a5;
+	color: #f6f5f7;
 	font-size: 15px;
 	font-weight: bold;
 	padding: 9px 20px;
@@ -121,7 +121,7 @@
     -webkit-appearance: none;
     width: 100%;
     height: 15px;
-    background: #fdfcfc;
+    background: #cec9cb;
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
@@ -162,4 +162,63 @@
     margin: 0 auto;
   }
 
-  
+  .card-body{
+    background-color: transparent;
+  }
+
+  .card {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border-radius: .25rem;
+    max-width: 550px;
+    margin-top: 10px;
+    min-height: 400px;
+    align-items: center;
+  }
+
+  .ContainerRelatorioCreate {
+    margin: 0 auto;
+    background: linear-gradient( #a5d8fa, #828eff);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: -20px;
+
+
+}
+
+.submitCard{
+    margin-right: 20px;
+    margin-left: 70%;
+    margin-top: -140px;
+    max-height: fit-content;
+    background-color: #fcfcfc;
+    border-radius: 10px;
+}
+
+.formsRelatorio{
+    width: 1800px;
+    margin-top: 10px;
+}
+
+.row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    
+  }
+
