--- a/views/homepageEE.ejs
+++ b/views/homepageEE.ejs
@@ -1,7 +1,20 @@
+<link rel="stylesheet" href="/stylesheets/homepageEE.css" type="text/css" />
 
-<link rel="stylesheet" href="/stylesheets/homepageEE.css" type="text/css"/>
 
 
+<head>
+    <meta charset="utf-8">
+    <title>Easy Grade </title>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:300,400,500,700">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+
+</head>
+
+<body>
+    
 <div class="logoutnbtn">
     <form action="/logout" method="post">
         <button class="btnlog" type="submit">
@@ -10,30 +23,24 @@
     </form>
 </div>
 
-<h1 class="classesText">Os Meus Educandos</h1>
-<div class="card-group">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
+
+    <div class="wrapper-grey padded">
+        <div class="container">
+            <h2 class="text-center">Os Meus Educandos</h2>
+            <div class="col-xs-12 col-sm-4">
+                <div class="card"
+                    style="background: linear-gradient(rgba(231, 208, 5, 0.3), rgba(233, 3, 3, 0.2))" onclick="window.location='/homepage/D/1/alunos'" >
+                    <div class="card-description">
+                        <h2>Chico da Tina</h2>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
+
+
+    <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</body>
