--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -67,39 +67,58 @@ body {
 }
 
 
-/*Profile Card 1*/
-.profile-card-1 {
+body {
+    margin: 0;
+    font-family: Open-sans, sans-serif;
+  }
+  h1, h2, h3 {
+    font-family: Raleway, Helvetica, sans-serif;
+  }
+  h2 {
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    margin-top: 0;
+  }
+  .padded {
+    padding: 100px 0;
+  }
+  .wrapper-grey {
+    background: #F4F4F4;
+  }
+
+
+  .card {
+    height: 250px;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
+    background-size: cover !important;
+    color: white;
     position: relative;
-    float: left;
-    overflow: hidden;
-    width: 20%;
-    color: #ffffff;
-    text-align: center;
-    height: 200px;
-    border-radius: 10px;
-    margin-left: 2%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    cursor: pointer;
-}
-
-.profile-card-1 .background {
-    width: 100%;
-    vertical-align: top;
-    opacity: 0.9;
-    -webkit-filter: blur(2px);
-    filter: blur(2px);
-    -webkit-transform: scale(1.8);
-    cursor: pointer;
-}
-
-.profile-card-1 .profile {
-    border-radius: 50%;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    border: 1px solid rgb(255, 255, 255);
+  }
+  
+  .card-description {
     position: absolute;
-    bottom: 40%;
-    left: 40%;
-    max-width: 100px;
-    font-size: 50px;
-    margin: 0 auto;
-    
-}
+    bottom: 10px;
+    left: 40px;
+  }
+  .card-description h2 {
+    font-size: 40px;
+  }
+  .card-description p {
+    font-size: 15px;
+  }
+
+  .features img {
+    width: 100px;
+  }
+  .features h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .features p {
+    font-size: 15px;
+    font-weight: lighter;
+  }
