--- a/views/homepageD.ejs
+++ b/views/homepageD.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/homepage.css" type="text/css" />
 
-<div class="navbar">
+<div>
     <form action="/logout" method="post">
         <button class="btnlog" type="submit">
             <img class="iconbtn" src="/assets/logout.png" />
@@ -11,25 +11,52 @@
 
 
 
-<h1 class="classesText">As minhas turmas</h1>
-<section>
-    <div class="classesContainer">
-        <div class="row">
+<head>
+    <meta charset="utf-8">
+    <title>Easy Grade </title>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:300,400,500,700">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
-            <div class="col-md-3">
-                <div class="card profile-card-1" onclick="window.location='/homepage/D/1/alunos'">
-                    <img src="/assets/red1.jpg" class="background" />
-                    <p class="profile"> 6º1</p>
+
+</head>
+
+<body>
+
+
+    <div class="wrapper-grey padded">
+        <div class="container">
+            <h2 class="text-center">As Minhas Turmas</h2>
+            <div class="col-xs-12 col-sm-4">
+                <div class="card" style="background: linear-gradient(rgba(5, 231, 220, 0.3), rgba(3, 233, 22, 0.2))"
+                    onclick="window.location='/homepage/D/1/alunos'">
+                    <div class="card-description">
+                        <h2>6º1</h2>
+                    </div>
                 </div>
-                <div class="card profile-card-1" onclick="window.location='/homepage/D/2/alunos'">
-                    <img src="/assets/mix.jpg" class="background" />
-                    <p class="profile"> 6º2</p>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+                <div class="card" style="background: linear-gradient(rgba(231, 208, 5, 0.3), rgba(233, 3, 3, 0.2))"
+                    onclick="window.location='/homepage/D/2/alunos'">
+                    <div class="card-description">
+                        <h2>6º2</h2>
+                    </div>
                 </div>
-                <div class="card profile-card-1" onclick="window.location='/homepage/D/3/alunos'">
-                    <img src="/assets/mix.jpg" class="background" />
-                    <p class="profile"> 6º3</p>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+                <div class="card" style="background: linear-gradient(rgba(231, 13, 5, 0.3), #fd039533)"
+                    onclick="window.location='/homepage/D/3/alunos'">
+                    <div class="card-description">
+                        <h2>6º3</h2>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
+
+
+    <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</body>
