--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -7,7 +7,7 @@
 
 <div class="headerBar">
     <div class="headerLeft">
-        <img class="backIcon" src="/assets/goBack.png" onclick="window.location='/homepage/D'" />
+        <img class="backIcon" src="/assets/goBack.png" onclick="history.back()"" />
         <p class="headerText">Lista de Alunos</p>
     </div>
 
