--- a/views/mensagensEE.ejs
+++ b/views/mensagensEE.ejs
@@ -1,6 +1,8 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/alunos.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/mensagens.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script defer src="/javascripts/messages.js"></script>
 
     <div class="headerBar">
         <div class="headerLeft">
@@ -16,18 +18,45 @@
         </div>
     </div>
 
-<html>
-  <body>
-    <h1>Mensagens</h1>
-    <ul id="mensagens"></ul>
-    <ul>
-        
-    </ul>
-    <form method="post">
-        <label for="mensagem">Mensagem : </label>
-        <input type="text" id="mensagem" name="mensagem" />
-        <button type="submit">Enviar</button>
-      </form>
-  </body>
+
+<html lang="en">
+<head> 
+		<meta charset="UTF-8">
+		<title>Title</title>
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<script src="https://use.fontawesome.com/1c6f725ec5.js"></script>
+</head>
+<body>
+		<div class="wrap">
+				<section class="left">
+						<div class="wrap-search">
+								<div class="search">
+										<i class="fa fa-search fa" aria-hidden="true"></i>
+										<input type="text" class="input-search" placeholder="Pesquise um nome">
+								</div>
+						</div>
+						<div class="contact-list"></div>
+				</section>
+
+				<section class="right">
+						<div class="chat-head">
+								<div class="chat-name">
+										<h1 class="font-name"></h1>
+										<p class="font-online"></p>
+								</div>
+						</div>
+						<div class="wrap-chat">
+								<div class="chat"></div>
+								<div class="information"></div>
+						</div>
+						<div class="wrap-message">
+								<div class="message">
+										<input type="text" class="input-message" placeholder="Escreva a mensagem">
+								</div>
+								<i class="fa fa-microphone fa-lg" aria-hidden="true"></i>
+						</div>
+				</section>
+		</div>
+</body>
 </html>
 
