--- a/public/stylesheets/mensagens.css
+++ b/public/stylesheets/mensagens.css
@@ -1,392 +1,135 @@
-/* ------ GENERAl LAYOUT ------ */
-* {
-    font-family: 'Roboto', sans-serif;
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+.container{max-width:1170px; margin:auto;}
+img{ max-width:100%;}
+.inbox_people {
+  background: #f8f8f8 none repeat scroll 0 0;
+  float: left;
+  overflow: hidden;
+  width: 40%; border-right:1px solid #c4c4c4;
+}
+.inbox_msg {
+  border: 1px solid #c4c4c4;
+  clear: both;
+  overflow: hidden;
+}
+.top_spac{ margin: 20px 0 0;}
+
+
+.recent_heading {float: left; width:40%;}
+.srch_bar {
+  display: inline-block;
+  text-align: right;
+  width: 60%;
+}
+.headind_srch{ padding:10px 29px 10px 20px; overflow:hidden; border-bottom:1px solid #c4c4c4;}
+
+.recent_heading h4 {
+  color: #05728f;
+  font-size: 21px;
+  margin: auto;
+}
+.srch_bar input{ border:1px solid #cdcdcd; border-width:0 0 1px 0; width:80%; padding:2px 0 4px 6px; background:none;}
+.srch_bar .input-group-addon button {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  padding: 0;
+  color: #707070;
+  font-size: 18px;
+}
+.srch_bar .input-group-addon { margin: 0 0 0 -27px;}
+
+.chat_ib h5{ font-size:15px; color:#464646; margin:0 0 8px 0;}
+.chat_ib h5 span{ font-size:13px; float:right;}
+.chat_ib p{ font-size:14px; color:#989898; margin:auto}
+.chat_img {
+  float: left;
+  width: 11%;
+}
+.chat_ib {
+  float: left;
+  padding: 0 0 0 15px;
+  width: 88%;
 }
 
-body {
-    background: #dbdbdb;
+.chat_people{ overflow:hidden; clear:both;}
+.chat_list {
+  border-bottom: 1px solid #c4c4c4;
+  margin: 0;
+  padding: 18px 16px 10px;
+}
+.inbox_chat { height: 550px; overflow-y: scroll;}
+
+.active_chat{ background:#ebebeb;}
+
+.incoming_msg_img {
+  display: inline-block;
+  width: 6%;
+}
+.received_msg {
+  display: inline-block;
+  padding: 0 0 0 10px;
+  vertical-align: top;
+  width: 92%;
+ }
+ .received_withd_msg p {
+  background: #ebebeb none repeat scroll 0 0;
+  border-radius: 3px;
+  color: #646464;
+  font-size: 14px;
+  margin: 0;
+  padding: 5px 10px 5px 12px;
+  width: 100%;
+}
+.time_date {
+  color: #747474;
+  display: block;
+  font-size: 12px;
+  margin: 8px 0 0;
+}
+.received_withd_msg { width: 57%;}
+.mesgs {
+  float: left;
+  padding: 30px 15px 0 25px;
+  width: 60%;
 }
 
-i {
-    width: 60px;
-    margin: auto;
+ .sent_msg p {
+  background: #05728f none repeat scroll 0 0;
+  border-radius: 3px;
+  font-size: 14px;
+  margin: 0; color:#fff;
+  padding: 5px 10px 5px 12px;
+  width:100%;
+}
+.outgoing_msg{ overflow:hidden; margin:26px 0 26px;}
+.sent_msg {
+  float: right;
+  width: 46%;
+}
+.input_msg_write input {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  color: #4c4c4c;
+  font-size: 15px;
+  min-height: 48px;
+  width: 100%;
 }
 
-/* ------ FONTS ------ */
-.font-name {
-    color: #000000;
-    font-size: 1em;
-    font-weight: inherit;
-    padding-bottom: 3px;
+.type_msg {border-top: 1px solid #c4c4c4;position: relative;}
+.msg_send_btn {
+  background: #05728f none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  font-size: 17px;
+  height: 33px;
+  position: absolute;
+  right: 0;
+  top: 11px;
+  width: 33px;
 }
-
-.font-preview {
-    color: #444444;
-    font-size: 0.9em;
-    font-weight: inherit;
-}
-
-.font-online {
-    color: #777777;
-    font-size: 0.8em;
-    font-weight: inherit;
-}
-
-
-.wrap {
-    display: flex;
-    height: 100%;
-    margin: auto;
-    box-shadow: 0 2px 2px #aaaaaa;
-}
-
-/* ------ LEFT SIDE ------ */
-.left {
-    width: 400px;
-}
-
-.profile {
-    width: 100%;
-    height: 60px;
-    background: #eeeeee;
-    border-right: 1px solid #dbdbdb;
-    display: flex;
-    justify-content: space-between;
-}
-
-.profile img {
-    width: 40px;
-    height: 40px;
-    margin: 10px;
-    border-radius: 50%;
-}
-
-.icons {
-    color: #777777;
-    display: flex;
-}
-
-.wrap-search {
-    width: 100%;
-    height: 45px;
-    background: #fbfbfb;
-    display: flex;
-}
-
-.search {
-    width: calc(100% - 20px);
-    height: 30px;
-    background: #ffffff;
-    margin: auto;
-    border: 1px solid #eeeeee;
-    border-radius: 5px;
-    display: flex;
-}
-
-.search i {
-    widht: 60px;
-}
-
-.search i, .wrap-message i {
-    color: #aaaaaa;
-    text-align: center;
-}
-
-.input-search {
-    width: 100%;
-    border: none;
-}
-
-.input-search:focus {
-    outline: none;
-}
-
-.contact-list {
-    background-color: #ffffff;
-    width: 100%;
-    height: calc(100% - 105px);
-    overflow-y: auto;
-}
-
-.contact, .active-contact, .new-message-contact {
-    height: 70px;
-    background-color: #ffffff;
-    display: flex;
-}
-
-.contact img, .active-contact img, .new-message-contact img {
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    border-radius: 50%;
-}
-
-.active-contact {
-    background-color: #ebebeb;
-}
-
-.contact:hover, .new-message-contact:hover {
-    background-color: #f5f5f5;
-}
-
-.new-message-contact {
-	font-weight: bold;
-}	
-
-.contact-preview {
-    width: 100%;
-    height: 70px;
-    border-bottom: 1px solid #eeeeee;
-    display: flex;
-    overflow: hidden;
-}
-
-.contact-text {
-    height: 40px;
-    margin: auto 0;
-    overflow: hidden;
-}
-
-.contact-time {
-    width: 55px;
-    color: rgba(0,0,0,0.4);
-    font-size: 0.8em;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px;
-    border-bottom: 1px solid #eeeeee;
-}
-
-.new-message {
-    background: #09d261;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    margin: auto;
-    flex-direction: column;
-    color: white;
-}
-
-.new-message p {
-	margin: auto;
-}
-
-/* ------ RIGHT SIDE ------ */
-.right {
-    min-width: calc(100% - 400px);
-}
-
-.chat-head {
-    background-color: #eeeeee;
-    width: 100%;
-    height: 60px;
-    display: flex;
-}
-
-.chat-head img {
-    width: 40px;
-    height: 40px;
-    margin: 10px;
-    border-radius: 50%;
-}
-
-.chat-head i {
-    color: #aaaaaa;
-    width: 60px;
-    margin: auto;
-    text-align: center;
-}
-
-#close-contact-information {
-    display: none;
-}
-
-.chat-name {
-    width: 100%;
-    margin: auto;
-}
-
-.wrap-chat {
-    height: calc(100% - 120px);
-    display: flex;
-}
-
-.chat {
-    background-color: #e5ddd5;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1089577/background.png);
-    width: 100%;
-    padding: 0px 10%;
-    padding-top: 7px;
-    overflow-y: auto;
-}
-
-.information {
-    width: 100%;
-    position: relative;
-    background: #f7f7f7;
-    display: none;
-    flex-direction: column;
-    overflow: auto;
-}
-
-.information div {
-    background: #ffffff;
-    padding: 10px;
-    margin-bottom: 20px;
-}
-
-.information img {
-    width: 200px;
-    height: 200px;
-    margin: 20px auto;
-    border-radius: 50%;
-    float: left;
-}
-
-.information h1 {
-    color: #009688;
-    font-size: 14px;
-    margin-bottom: 5px;
-}
-
-.listGroups {
-    display: flex;
-    margin: 0px !important;
-}
-
-.listGroups img {
-    width: 40px;
-    height: 40px;
-    margin: 0px 10px 0px 0px;
-}
-
-.listGroups p {
-    margin: auto 0px;
-}
-
-/* ------ CHAT ------ */
-.chat-bubble {
-    border-radius: 7px;
-    box-shadow: 0 2px 2px rgba(0,0,0,0.05);
-    padding: 5px 7px;
-    width: 350px;
-    max-width: 100%;
-    position: relative;
-}
-
-.you {
-    background: #ffffff;
-    margin: 0px auto 10px 0px;
-}
-
-.me {
-    background: #dcf8c6;
-    margin: 0px 0px 10px auto;
-}
-
-.your-mouth {
-    width: 0;
-    height: 0;
-    border-bottom: 10px solid white;
-    border-left: 10px solid transparent;
-    position: absolute;
-    bottom: 10px;
-    left: -10px;
-}
-
-.my-mouth {
-    width: 0;
-    height: 0;
-    border-bottom: 10px solid #dcf8c6;
-    border-right: 10px solid transparent;
-    position: absolute;
-    bottom: 10px;
-    left: 100%;
-}
-
-.content {
-    margin: 0.5em 0;
-    line-height: 120%;
-    font-size: 0.9em;
-}
-
-.content img {
-    width: 100%;
-}
-
-.time {
-    color: rgba(0,0,0,0.4);
-    font-size: 0.6em;
-    text-align: right;
-    margin-top: -10px;
-}
-
-.pink {
-    color: #EE33AA;
-}
-
-.green {
-    color: #44FF66;
-}
-
-.orange {
-    color: #FF8811;
-}
-
-.wrap-message {
-    width: 100%;
-    height: 60px;
-    background: #f1f1f1;
-    display: flex;
-}
-
-.message {
-    width: 100%;
-    height: 45px;
-    background: #ffffff;
-    margin: auto;
-    border: 1px solid #eeeeee;
-    border-radius: 5px;
-    display: flex;
-}
-
-.input-message {
-    width: 100%;
-    margin: 0px 10px;
-    border: none;
-}
-
-.input-message:focus {
-    outline: none;
-}
-
-/* ------ SCROLLBAR ------ */
-
-body::-webkit-scrollbar, .contact-list::-webkit-scrollbar, .chat::-webkit-scrollbar, .information::-webkit-scrollbar {
-    width: 0.4em;
-    height: 0.4em;
-}
-
-body::-webkit-scrollbar-thumb, .contact-list::-webkit-scrollbar-thumb, .chat::-webkit-scrollbar-thumb, .information::-webkit-scrollbar-thumb {
-    background-color: rgba(0,0,0,0.2);
-}
-
-/* ------ MEDIA QUERIES ------ */
-@media (min-width: 1200px) {
-    .wrap {
-        margin-bottom: 2vh;
-        margin-top: 0px;
-        height: calc(98vh - 25px);
-    }
-}
-
-@media (max-width: 600px) {
-    .wrap {
-        height: calc(100vh - 0.4em);
-    }
+.messaging { padding: 0 0 50px 0;}
+.msg_history {
+  height: 516px;
+  overflow-y: auto;
 }
