--- a/views/mensagensEE.ejs
+++ b/views/mensagensEE.ejs
@@ -1,62 +1,197 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/alunos.css" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/mensagens.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script defer src="/javascripts/messages.js"></script>
 
-    <div class="headerBar">
-        <div class="headerLeft">
-            <img class="backIcon" src="/assets/goBack.png" onclick="window.history.back()" />
-            </p>
-        </div>
-        <div>
-            <form action="/logout" method="post">
-                <button class="btnlog" type="submit">
-                    <img class="iconbtn" src="/assets/logout.png" />
-                </button>
-            </form>
-        </div>
-    </div>
+<div class="headerBar">
+	<div class="headerLeft">
+		<img class="backIcon" src="/assets/goBack.png" onclick="window.history.back()" />
+		</p>
+	</div>
+	<div>
+		<form action="/logout" method="post">
+			<button class="btnlog" type="submit">
+				<img class="iconbtn" src="/assets/logout.png" />
+			</button>
+		</form>
+	</div>
+</div>
 
 
-<html lang="en">
-<head> 
-		<meta charset="UTF-8">
-		<title>Title</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<script src="https://use.fontawesome.com/1c6f725ec5.js"></script>
-</head>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+
+<html>
+
+<head>
+
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css"
+		rel="stylesheet" </head>
+
 <body>
-		<div class="wrap">
-				<section class="left">
-						<div class="wrap-search">
-								<div class="search">
-										<i class="fa fa-search fa" aria-hidden="true"></i>
-										<input type="text" class="input-search" placeholder="Pesquise um nome">
-								</div>
+	<div class="container">
+		<div class="messaging">
+			<div class="inbox_msg">
+				<div class="inbox_people">
+					<div class="headind_srch">
+						<div class="recent_heading">
+							<h4>Recent</h4>
 						</div>
-						<div class="contact-list"></div>
-				</section>
+						<div class="srch_bar">
+							<div class="stylish-input-group">
+								<input type="text" class="search-bar" placeholder="Search">
+								<span class="input-group-addon">
+									<button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+								</span>
+							</div>
+						</div>
+					</div>
+					<div class="inbox_chat">
+						<div class="chat_list active_chat">
+							<div class="chat_people">
+								<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+										alt="sunil"> </div>
+								<div class="chat_ib">
+									<h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+									<p>Test, which is a new approach to have all solutions
+										astrology under one roof.</p>
+								</div>
+							</div>
+						</div>
+						<div class="chat_list">
+							<div class="chat_people">
+								<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+										alt="sunil"> </div>
+								<div class="chat_ib">
+									<h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+									<p>Test, which is a new approach to have all solutions
+										astrology under one roof.</p>
+								</div>
+							</div>
+						</div>
+						<div class="chat_list">
+							<div class="chat_people">
+								<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+										alt="sunil"> </div>
+								<div class="chat_ib">
+									<h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+									<p>Test, which is a new approach to have all solutions
+										astrology under one roof.</p>
+								</div>
+							</div>
+						</div>
+						<div class="chat_list">
+							<div class="chat_people">
+								<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+										alt="sunil"> </div>
+								<div class="chat_ib">
+									<h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+									<p>Test, which is a new approach to have all solutions
+										astrology under one roof.</p>
+								</div>
+							</div>
+						</div>
+						<div class="chat_list">
+							<div class="chat_people">
+								<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+										alt="sunil"> </div>
+								<div class="chat_ib">
+									<h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+									<p>Test, which is a new approach to have all solutions
+										astrology under one roof.</p>
+								</div>
+							</div>
+						</div>
+						<div class="chat_list">
+							<div class="chat_people">
+								<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+										alt="sunil"> </div>
+								<div class="chat_ib">
+									<h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+									<p>Test, which is a new approach to have all solutions
+										astrology under one roof.</p>
+								</div>
+							</div>
+						</div>
+						<div class="chat_list">
+							<div class="chat_people">
+								<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+										alt="sunil"> </div>
+								<div class="chat_ib">
+									<h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+									<p>Test, which is a new approach to have all solutions
+										astrology under one roof.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="mesgs">
+					<div class="msg_history">
+						<div class="incoming_msg">
+							<div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+									alt="sunil"> </div>
+							<div class="received_msg">
+								<div class="received_withd_msg">
+									<p>Test which is a new approach to have all
+										solutions</p>
+									<span class="time_date"> 11:01 AM | June 9</span>
+								</div>
+							</div>
+						</div>
+						<div class="outgoing_msg">
+							<div class="sent_msg">
+								<p>Test which is a new approach to have all
+									solutions</p>
+								<span class="time_date"> 11:01 AM | June 9</span>
+							</div>
+						</div>
+						<div class="incoming_msg">
+							<div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+									alt="sunil"> </div>
+							<div class="received_msg">
+								<div class="received_withd_msg">
+									<p>Test, which is a new approach to have</p>
+									<span class="time_date"> 11:01 AM | Yesterday</span>
+								</div>
+							</div>
+						</div>
+						<div class="outgoing_msg">
+							<div class="sent_msg">
+								<p>Apollo University, Delhi, India Test</p>
+								<span class="time_date"> 11:01 AM | Today</span>
+							</div>
+						</div>
+						<div class="incoming_msg">
+							<div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+									alt="sunil"> </div>
+							<div class="received_msg">
+								<div class="received_withd_msg">
+									<p>We work directly with our designers and suppliers,
+										and sell direct to you, which means quality, exclusive
+										products, at a price anyone can afford.</p>
+									<span class="time_date"> 11:01 AM | Today</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="type_msg">
+						<div class="input_msg_write">
+							<input type="text" class="write_msg" placeholder="Type a message" />
+							<button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o"
+									aria-hidden="true"></i></button>
+						</div>
+					</div>
+				</div>
+			</div>
 
-				<section class="right">
-						<div class="chat-head">
-								<div class="chat-name">
-										<h1 class="font-name"></h1>
-										<p class="font-online"></p>
-								</div>
-						</div>
-						<div class="wrap-chat">
-								<div class="chat"></div>
-								<div class="information"></div>
-						</div>
-						<div class="wrap-message">
-								<div class="message">
-										<input type="text" class="input-message" placeholder="Escreva a mensagem">
-								</div>
-								<i class="fa fa-microphone fa-lg" aria-hidden="true"></i>
-						</div>
-				</section>
+
 		</div>
+	</div>
 </body>
-</html>
 
+</html>
