chat worki on D, copy and paste for EE probably many fixes added

--- a/views/mensagensEE.ejs
+++ b/views/mensagensEE.ejs
@@ -30,7 +30,8 @@
 <head>
 
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css"
-		rel="stylesheet" </head>
+		rel="stylesheet">
+</head>
 
 <body>
 	<div class="container">
