--- a/views/mensagens.ejs
+++ b/views/mensagens.ejs
@@ -31,7 +31,7 @@
     </ul>
     <form method="post">
         <label for="mensagem">Mensagem : </label>
-        <input type="text" id="mensagem" name="mensagem" />
+        <input type="text" id="mensagem" name="mensagem" required />
         <button type="submit">Enviar</button>
       </form>
   </body>
